--- a/index.html
+++ b/index.html
@@ -23,23 +23,28 @@
         <div class="st-bottom">
             <span class="st-accommadation st-selected">
                 <div class="st-icon-container">
-                    <i class="fas fa-building"></i></div> Smeštaj
+                    <i class="fas fa-building"></i></div>
+                <p>Smeštaj</p>
             </span>
             <span class="st-flight st-unselected">
                 <div class="st-icon-container">
-                    <i class="fas fa-plane-departure"></i></div> Letovi
+                    <i class="fas fa-plane-departure"></i></div>
+                <p>Letovi</p>
             </span>
             <span class="st-rent st-unselected">
                 <div class="st-icon-container">
-                    <i class="fas fa-car"></i></div> Iznajmljivanje automobila
+                    <i class="fas fa-car"></i></div>
+                <p>Iznajmljivanje automobila</p>
             </span>
             <span class="st-tour st-unselected">
                 <div class="st-icon-container">
-                    <i class="fas fa-dharmachakra"></i></div> Obilasci i aktivnosti
+                    <i class="fas fa-dharmachakra"></i></div>
+                <p>Obilasci i aktivnosti</p>
             </span>
             <span class="st-taxi st-unselected">
                 <div class="st-icon-container">
-                    <i class="fas fa-taxi"></i></div> Taksi od/do aerodroma
+                    <i class="fas fa-taxi"></i></div>
+                <p>Taksi od/do aerodroma</p>
             </span>
         </div>
     </div>
@@ -91,6 +96,7 @@
     <div class="st-images">
         <div class="st-image-holder">
             <div class="st-first">
+                <div class="st-gradient"></div>
                 <p class="st-title">Sankt Peterburg <img src="./img/flag-russia.png" alt=" "></p>
                 <p class="st-objects">Najbolji razlog za posetu: <br>
                     <span>arhitektura, razgledanje, setnje gradom</span></p>
@@ -104,35 +110,42 @@
                 <div class="st-icon-holder"><i class="fas fa-times"></i></div>
             </div>
             <div class="st-second">
-                <img src="./img/icon.png" alt=" " class="st-icon">
-                <p class="st-title">Moskva <img src="./img/flag-russia.png" alt=" "></p>
-                <p class="st-objects">8 527 smeštajnih objekata </p>
-                <p class="st-average-price">Prosečna cena<br> <span class="st-price">RSD 9.148</span></p>
-                <div class="st-icon-holder"><i class="fas fa-times"></i></div>
-
+                    <div class="st-gradient">
+                    <img src="./img/icon.png" alt=" " class="st-icon">
+                    <p class="st-title">Moskva <img src="./img/flag-russia.png" alt=" "></p>
+                    <p class="st-objects">8 527 smeštajnih objekata </p>
+                    <p class="st-average-price">Prosečna cena<br> <span class="st-price">RSD 9.148</span></p>
+                    <div class="st-icon-holder"><i class="fas fa-times"></i></div>
+                </div>
             </div>
         </div>
         <div class="st-second-row">
             <div class="st-first st-image">
-                <img src="./img/icon.png" alt=" " class="st-icon">
-                <p class="st-title">Kijev <img src="./img/flag-ukraine.png" alt=""> </p>
-                <p class="st-objects-number">3 763 smeštajnih objekata</p>
-                <p class="st-price">Prosečna cena <br><span>RSD 8.958</span></p>
-                <i class="fas fa-times"></i>
+                <div class="st-gradient">
+                    <i class="fas fa-times"></i>
+                    <img src="./img/icon.png" alt=" " class="st-icon">
+                    <p class="st-title">Kijev <img src="./img/flag-ukraine.png" alt=""> </p>
+                    <p class="st-objects-number">3 763 smeštajnih objekata</p>
+                    <p class="st-price">Prosečna cena <br><span>RSD 8.958</span></p>
+                </div>
             </div>
             <div class="st-second st-image">
-                <img src="./img/icon.png" alt=" " class="st-icon">
-                <p class="st-title">Riga <img src="./img/flag-latvia.png" alt=""> </p>
-                <p class="st-objects-number">1468 smeštajnih objekata</p>
-                <p class="st-price">Prosečna cena <br><span>RSD 10.960</span></p>
-                <i class="fas fa-times"></i>
+                <div class="st-gradient">
+                    <i class="fas fa-times"></i>
+                    <img src="./img/icon.png" alt=" " class="st-icon">
+                    <p class="st-title">Riga <img src="./img/flag-latvia.png" alt=""> </p>
+                    <p class="st-objects-number">1468 smeštajnih objekata</p>
+                    <p class="st-price">Prosečna cena <br><span>RSD 10.960</span></p>
+                </div>
             </div>
             <div class="st-third st-image">
-                <img src="./img/icon.png" alt=" " class="st-icon">
-                <p class="st-title">Helsinki <img src="./img/flag-finland.ico" alt=""> </p>
-                <p class="st-objects-number">952 smeštajnih objekata</p>
-                <p class="st-price">Prosečna cena <br><span>RSD 22.998</span></p>
-                <i class="fas fa-times"></i>
+                <div class="st-gradient">
+                    <i class="fas fa-times"></i>
+                    <img src="./img/icon.png" alt=" " class="st-icon">
+                    <p class="st-title">Helsinki <img src="./img/flag-finland.ico" alt=""> </p>
+                    <p class="st-objects-number">952 smeštajnih objekata</p>
+                    <p class="st-price">Prosečna cena <br><span>RSD 22.998</span></p>
+                </div>
             </div>
         </div>
     </div>
@@ -214,10 +227,16 @@
                 </div>
             </div>
             <p class="st-available">
-                1 908 smeštaja za odmor,<br>
-                1 785 apartmana,<br>
+                1 908 smeštaja za odmor,<br> </p>
+            <p class="st-available">
+                1 785 apartmana,<br></p>
+            <p class="st-available">
                 84 pansiona sa uslugom doručka,<br>
+            </p>
+            <p class="st-available">
                 79 smeštaja u okviru domaćinstva,<br>
+            </p>
+            <p class="st-available">
                 52 pansiona
             </p>
         </div>
@@ -231,12 +250,15 @@
                 </div>
             </div>
             <p class="st-available">
-                4 154 smeštaja za odmor,<br>
-                3 911 apartmana,<br>
-                200 smeštaja u okviru domaćinstva,<br>
-                179 pansiona sa uslugom doručka,<br>
-                142 pansiona
-            </p>
+                4 154 smeštaja za odmor,<br></p>
+            <p class="st-available">
+                3 911 apartmana,<br></p>
+            <p class="st-available">
+                200 smeštaja u okviru domaćinstva,<br></p>
+            <p class="st-available">
+                179 pansiona sa uslugom doručka,<br></p>
+            <p class="st-available">
+                142 pansiona</p>
         </div>
         <div class="st-rome st-location">
             <div class="st-image">
@@ -248,10 +270,14 @@
                 </div>
             </div>
             <p class="st-available">
-                10 966 smeštaja za odmor,<br>
-                6 541 apartmana,<br>
-                3 602 pansiona sa uslugom doručka,<br>
-                2 164 smeštaja u okviru domaćinstva,<br>
+                10 966 smeštaja za odmor,<br></p>
+            <p class="st-available">
+                6 541 apartmana,<br></p>
+            <p class="st-available">
+                3 602 pansiona sa uslugom doručka,<br></p>
+            <p class="st-available">
+                2 164 smeštaja u okviru domaćinstva,<br></p>
+            <p class="st-available">
                 2 080 pansiona
             </p>
         </div>
@@ -265,9 +291,12 @@
                 </div>
             </div>
             <p class="st-available">
-                1 110 smeštaja za odmor,<br>
-                1 093 apartmana,<br>
-                14 smeštaja u okviru domaćinstva,<br>
+                1 110 smeštaja za odmor,<br></p>
+            <p class="st-available">
+                1 093 apartmana,<br></p>
+            <p class="st-available">
+                14 smeštaja u okviru domaćinstva,<br></p>
+            <p class="st-available">
                 12 vikendica, 12 vila
             </p>
         </div>
