--- a/index.html
+++ b/index.html
@@ -421,7 +421,8 @@
                 <img src="./img/USA.png" alt=" ">
                 <p class="st-text">Stvari u kojima morate uživati prilikom svoje sledeće posete destinaciji Sjedinjene
                     Američke Države su relaksacija, restorani i šoping!</p>
-                <p class="st-location-name">Sjedinjene Američke Države</p>
+                <p class="st-location-name">Sjedinjene Američke Države
+                </p>
             </div>
             <div class="st-italy">
                 <img src="./img/Italija.png" alt=" ">
